--- a/src/css/header.css
+++ b/src/css/header.css
@@ -5,17 +5,25 @@
 .nav-list {
   display: flex;
   align-items: center;
-  justify-content: flex-end;
+
   gap: 40px;
 }
 
 .nav-link {
-  font-weight: 500;
+  border-radius: 8px;
+  background: #4e75ff;
+  cursor: pointer;
+  padding: 10px;
+  font-size: 35px;
+  font-weight: 700;
   letter-spacing: 0.02em;
   line-height: 1.5;
+  transition: transform 0.4s;
 }
 
 .nav-link:hover,
 .nav-link:focus {
-  color: #747bff;
+  color: #fafafa;
+  transform: scale(1.1);
+  box-shadow: 5px 6px 7px;
 }
