--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -5,11 +5,12 @@
   |============================
 */
 @import url('./reset.css');
-@import url('./vite-promo.css');
+@import url('./timer.css');
+@import url('./snackbar.css');
 @import url('./header.css');
 
 :root {
-  font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
+  font-family: Inter, Avenir, Helvetica, Arial, Montserrat, sans-serif;
   font-size: 16px;
   line-height: 24px;
   font-weight: 400;
